# secrets-manager

./: .gitignore  README.md  azure-storage-sbom.json  sn_source_control.properties  test_ci.sh
.github/: CODEOWNERS
.github/workflows/: java-publish.yml  ksm.config.yml  npm-publish.yml  publish-chef-supermarket.yml  publish.azurepipelineextension.yml  publish.chefsupermaket.yml  publish.chefsupermarket.yml  publish.crates.rust.sdk.yml  publish.dotnet.yml  publish.hashicorpvault.plugin.yml  publish.maven.java.core.yml  publish.maven.java.storage.aws.kms.yml  publish.maven.java.storage.azure.kms.yml  publish.maven.java.storage.gcp.kms.yml  publish.maven.java.storage.oracle.kms.yml  publish.maven.storage.gcp.kms.yml  publish.maven.yml  publish.npm.storage.aws.kms.yml  publish.npm.storage.azure.kms.yml  publish.npm.storage.gcp.kms.yml  publish.npm.storage.oracle.kms.yml  publish.npm.yml  publish.nuget.storage.aws.kms.yml  publish.nuget.storage.azure.kms.yml  publish.nuget.storage.gcp.kms.yml  publish.nuget.storage.oracle.kms.yml  publish.nuget.strong.named.yml  publish.nuget.yml  publish.powershell.yml  publish.puppetforge.yml  publish.pypi.ansible.yml  publish.pypi.cli.yml  publish.pypi.helper.yml  publish.pypi.sdk.storage.gcp.kms.yml  publish.pypi.sdk.storage.oracle.kms.yml  publish.pypi.sdk.storage.yml  publish.pypi.sdk.yml  publish.rubygems.ruby.sdk.yml  publish.servicenow.plugin.yml  publish1.npm.yml  (+31 more)
ada622f0c3f66210eb251c63e40131fd/: README.md  checksum.txt
ada622f0c3f66210eb251c63e40131fd/author_elective_update/: help_content_013f3a3f4703e210216abc74116d433e.xml  help_content_1bbb54b9c3cbe650eb251c63e40131b5.xml  help_content_93bb54b9c3cbe650eb251c63e40131d7.xml  help_content_d7bb54b9c3cbe650eb251c63e40131de.xml  help_content_de4c9cb9c3cbe650eb251c63e40131a9.xml  help_guidance_step_0bbb9c79c3cbe650eb251c63e401317e.xml  help_guidance_step_32c187ff4703e210216abc74116d430b.xml  help_guidance_step_57bb54b9c3cbe650eb251c63e40131b9.xml  help_guidance_step_5bbb54b9c3cbe650eb251c63e40131d9.xml  help_guidance_step_67db94b9c3cbe650eb251c63e4013105.xml  help_guidance_step_76b147ff4703e210216abc74116d4306.xml  help_guidance_step_b9869ddac307aa50eb251c63e4013112.xml  help_guidance_step_c7bb9c79c3cbe650eb251c63e401317a.xml  help_guidance_step_d1e1c7ff4703e210216abc74116d43f0.xml  oauth_entity_3fdcbd9ac3c7aa50eb251c63e40131d3.xml  oauth_entity_4e143912c3c7aa50eb251c63e40131c6.xml  oauth_entity_908839d2c3c7aa50eb251c63e4013140.xml  sys_app_application_1b563c49474bee10216abc74116d43f5.xml  sys_app_application_af2aa516c387aa50eb251c63e4013185.xml  sys_app_application_af391877c3b6ae10eb251c63e40131f1.xml  sys_app_module_15a24c82c30f2a50eb251c63e40131ff.xml  sys_app_module_6f395877c3b6ae10eb251c63e401310e.xml  sys_app_module_a61ae40e47c3e250216abc74116d43f2.xml  sys_app_module_b33b684e47c3e250216abc74116d4306.xml  sys_embedded_tour_guide_b68eeb054732a210216abc74116d4380.xml  sys_properties_95dd4749c37ea210eb251c63e40131c3.xml  sys_script_6855f912c3c7aa50eb251c63e4013187.xml  sys_script_aa64fd12c3c7aa50eb251c63e40131b5.xml  sys_script_include_79e38f4dc33ea210eb251c63e4013104.xml  sys_transform_entry_19d06948c38fee10eb251c63e401316b.xml  sys_transform_entry_9783690cc38fee10eb251c63e4013119.xml  sys_ui_application_17563c49474bee10216abc74116d43fe.xml  sys_ui_application_2b2a6916c387aa50eb251c63e401313a.xml  sys_ui_application_a3395877c3b6ae10eb251c63e4013113.xml  sys_ui_form_sections_b3e2dcf9c38be650eb251c63e4013184.xml  sys_ui_module_1f567c49474bee10216abc74116d4301.xml  (+28 more)
examples/go/: README.md  (+4 more)
examples/rust/: .gitignore  01_quick_start.rs  02_retrieve_secrets.rs  03_update_secrets.rs  04_password_rotation.rs  05_files.rs  06_caching.rs  Cargo.toml  README.md
sdk/: fake_data.json  test_data.json
sdk/python/storage/keeper_secrets_manager_storage_gcp_kms/: README.md  pyproject.toml  requirements.txt
sdk/python/storage/keeper_secrets_manager_storage_gcp_kms/keeper_secrets_manager_storage_gcp_kms/: __init__.py  constants.py  kms_client.py  kms_key_config.py  storage_gcp_kms.py  util_options.py  utils.py
sdk/python/storage/keeper_secrets_manager_storage_gcp_kms/tests/: test_storage_gcp_kms.py
sdk/python/storage/keeper_secrets_manager_storage_oracle_kms/: LICENSE  README.md  pyproject.toml  requirements.txt
sdk/python/storage/keeper_secrets_manager_storage_oracle_kms/keeper_secrets_manager_storage_oracle_kms/: __init__.py  constants.py  oci_kms_client.py  oracle_key_value_storage.py  utils.py
sdk/python/storage/keeper_secrets_manager_storage_oracle_kms/tests/: test_storage_oracle_kms.py
sdk/rust/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
sdk/rust/docs/: developer_docs.md  publishing guide.md
sdk/rust/examples/manual_tests/: 01_initialize_and_get_secrets.rs  02_update_secret.rs  03_password_rotation.rs  04_search_by_title.rs  05_update_with_options.rs  06_caching_function.rs  07_test_rotation_base64.rs  08_test_link_removal.rs  09_check_fileref.rs  10_test_link_removal_debug.rs  11_upload_and_remove_file.rs  README.md
sdk/rust/src/: cache.rs  caching.rs  config_keys.rs  constants.rs  crypto.rs  custom_error.rs  enums.rs  helpers.rs  keeper_globals.rs  lib.rs  main.rs  storage.rs  utils.rs
sdk/rust/src/core/: core.rs  mod.rs
sdk/rust/src/dto/: dtos.rs  field_structs.rs  mod.rs  payload.rs
sdk/rust/src/tests/: config_keys_tests.rs  crypto_tests.rs  keeper_globals_tests.rs  mod.rs  ssl_config_tests.rs  storage_tests.rs  utils_tests.rs
sdk/rust/tests/: bind_lifecycle_tests.rs  caching_tests.rs  caching_transmission_key_tests.rs  create_secret_test.rs  crypto_tests.rs  delete_secret_tests.rs  download_file_by_title_tests.rs  duplicate_uid_notation_test.rs  empty_config_test.rs  error_handling_tests.rs  feature_validation_tests.rs  file_operations_tests.rs  folder_operations_tests.rs  get_secrets_tests.rs  il5_tests.rs  integration_tests.rs  keeper_record_link_tests.rs  notation_tests.rs  payload_test.rs  proxy_integration_test.rs  proxy_test.rs  regional_hostname_tests.rs  str_ownership_tests.rs  throttle_tests.rs  totp_test.rs  update_secret_tests.rs
(+1612 files in other folders)
