[package]
name = "keeper-secrets-manager-core"
version = "16.6.6"
authors = ["Keeper Security <sm@keepersecurity.com>"]
edition = "2021"
description = "Rust SDK for Keeper Secrets Manager"
license = "MIT"
repository = "https://github.com/Keeper-Security/secrets-manager"
homepage = "https://docs.keeper.io/en/keeperpam/secrets-manager/overview"
readme = "README.md"
keywords = ["secrets", "security", "keeper", "vault", "password-manager"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "keeper_secrets_manager_core"
path = "src/lib.rs"

[features]
default = ["sequential_tests"]
sequential_tests = []

[dependencies]
aes="0.8"
aes-gcm ="0.10"
data-encoding = "2.6.0"
base64 = "0.22"
block-padding = "0.3"
cipher = "0.4"
chrono = "0.4"
ecdsa = "0.16"
hex = "0.4"
hmac = "0.12"
log = "0.4"
lazy_static = "1.4.0"
mockall = "0.13"
p256 = {version = "0.13.2", features = ["ecdh"]}
rand = "0.8"
regex = "1.9"
reqwest ={version = "0.12", features = ["blocking", "json","multipart"]}
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version= "1.0.133", features = ["preserve_order","arbitrary_precision"]}
sha2 = "0.10"
sha1 = "0.10"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.3"
tracing = "0.1"
tracing-subscriber = "0.2"
num-bigint = "0.4"
url = "2.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" ,features = ["securitybaseapi","winbase","winerror","errhandlingapi","winnt"]}

[dev-dependencies]
tempfile = "3.14" 