[package]
name = "keeper-secrets-manager-core"
version = "17.1.0"
authors = ["Keeper Security <sm@keepersecurity.com>"]
edition = "2021"
rust-version = "1.87"
description = "Rust SDK for Keeper Secrets Manager"
license = "MIT"
repository = "https://github.com/Keeper-Security/secrets-manager"
homepage = "https://docs.keeper.io/en/keeperpam/secrets-manager/overview"
readme = "README.md"
keywords = ["secrets", "security", "keeper", "vault", "password-manager"]
categories = ["cryptography", "api-bindings"]

[lib]
name = "keeper_secrets_manager_core"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
data-encoding = "2.9"
base64 = "0.22"
block-padding = "0.3"
cipher = "0.4"
chrono = "0.4.41"
ecdsa = "0.16"
env_logger = "0.11"
hex = "0.4"
hmac = "0.12"
log = "0.4"
lazy_static = "1.5"
p256 = { version = "0.13", features = ["ecdh"] }
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12.22", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order", "arbitrary_precision"] }
sha2 = "0.10"
sha1 = "0.10"
strum = "0.26"
strum_macros = "0.26"
tempfile = "3.20"
tracing = "0.1"
tracing-subscriber = "0.3"
num-bigint = "0.4"
url = "2.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" ,features = ["securitybaseapi","winbase","winerror","errhandlingapi","winnt"]}

[dev-dependencies]
mockall = "0.13"
tempfile = "3.20"
serial_test = "3.0"

# Manual integration test examples
[[example]]
name = "01_initialize_and_get_secrets"
path = "examples/manual_tests/01_initialize_and_get_secrets.rs"

[[example]]
name = "02_update_secret"
path = "examples/manual_tests/02_update_secret.rs"

[[example]]
name = "03_password_rotation"
path = "examples/manual_tests/03_password_rotation.rs"

[[example]]
name = "04_search_by_title"
path = "examples/manual_tests/04_search_by_title.rs"

[[example]]
name = "05_update_with_options"
path = "examples/manual_tests/05_update_with_options.rs"

[[example]]
name = "06_caching_function"
path = "examples/manual_tests/06_caching_function.rs"

[[example]]
name = "07_test_rotation_base64"
path = "examples/manual_tests/07_test_rotation_base64.rs"

[[example]]
name = "08_test_link_removal"
path = "examples/manual_tests/08_test_link_removal.rs"

[[example]]
name = "09_check_fileref"
path = "examples/manual_tests/09_check_fileref.rs"

[[example]]
name = "10_test_link_removal_debug"
path = "examples/manual_tests/10_test_link_removal_debug.rs"

[[example]]
name = "11_upload_and_remove_file"
path = "examples/manual_tests/11_upload_and_remove_file.rs" 