[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keeper-secrets-manager-storage-oracle-kms"
version = "1.1.1"
description = "Keeper Secrets Manager SDK storage integration with Oracle Cloud KMS for encrypted key-value storage."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Keeper Security", email = "sm@keepersecurity.com"},
]
keywords = [
    "Keeper",
    "Password",
    "Secrets Manager",
    "Storage",
    "Oracle",
    "OCI",
    "KMS",
    "Oracle Cloud",
    "Key Management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "keeper-secrets-manager-core>=17.2.1",
    "oci>=2.174.0",
    "pycryptodome>=3.21.0",
    "requests>=2.32.0",
    "cryptography>=46.0.5",
]

[project.urls]
Homepage = "https://github.com/Keeper-Security/secrets-manager"
Documentation = "https://docs.keeper.io/secrets-manager/secrets-manager/overview"
Repository = "https://github.com/Keeper-Security/secrets-manager"
"Bug Tracker" = "https://github.com/Keeper-Security/secrets-manager/issues"

[tool.setuptools]
packages = ["keeper_secrets_manager_storage_oracle_kms"]
